@@ -48,6 +48,7 @@ if (cacti_sizeof($parms)) {
 	$host_ids            = array();
 	$graph_template_ids  = array();
 	$regex               = array();
+	$graph_ids           = array();
 
 	$graphTemplates      = getGraphTemplates();
 	$hostTemplates       = getHostTemplates();
@@ -69,6 +70,7 @@ if (cacti_sizeof($parms)) {
 		'graph-type::',
 		'graph-template-id::',
 		'host-template-id::',
+		'graph-id::',
 		'graph-regex::',
 		'all',
 		'preserve',
@@ -116,6 +118,14 @@ if (cacti_sizeof($parms)) {
 			}
 
 			$host_template_ids = $value;
+
+			break;
+		case 'graph-id':
+			if (!is_array($value)) {
+				$value = array($value);
+			}
+
+			$graph_ids = $value;
 
 			break;
 		case 'host-id':
@@ -170,7 +180,7 @@ if (cacti_sizeof($parms)) {
 }
 
 if ($list && $force) {
-	print "The --list and --force options are mutually exclusive.  Pick on or the other." . PHP_EOL;
+	print "The --list and --force options are mutually exclusive.  Pick one or the other." . PHP_EOL;
 	exit(1);
 }
 
@@ -196,6 +206,15 @@ if (cacti_sizeof($host_ids)) {
 	foreach($host_ids as $id) {
 		if (!is_numeric($id) || $id <= 0) {
 			print "FATAL: Host ID $id is invalid" . PHP_EOL;
+			exit(1);
+		}
+	}
+}
+
+if (cacti_sizeof($graph_ids)) {
+	foreach($graph_ids as $id) {
+		if (!is_numeric($id) || $id <= 0) {
+			print "FATAL: Graph ID $id is invalid" . PHP_EOL;
 			exit(1);
 		}
 	}
@@ -316,6 +335,7 @@ function display_help() {
 	print "    --graph-template-id=ID  Mandatory list of Graph Templates." . PHP_EOL;
 	print "    --host-template-id=ID   Optional list of Device Templates." . PHP_EOL;
 	print "    --host-id=ID            Optional list of Device IDs." . PHP_EOL;
+	print "    --graph-id=ID           Optional list of Graphs." . PHP_EOL;
 	print "    --graph-regex=R         Optional Graph name regular expression." . PHP_EOL;
 	print "    --all                   Remove all Graphs.  Ignore other settings." . PHP_EOL;
 	print "    --force                 Actually remove the Graphs, dont just list." . PHP_EOL;
