@@ -1,10 +1,13 @@
 Cacti CHANGELOG
 
 1.3.0-dev
+-issue#3066: Enable the secure flag on cookies when HTTPS is enabled.
+-issue#3074: ss_net_snmp_disk_bytes.php and ss_net_snmp_disk_io.php do now report mmcblk data.
 -feature#1523: Value above RRD maximum value
 -feature#2474: Enable better version reporting for GitHub/Source/Package editions
 -feature#2550: Enable use of authenticator codes for Two-Factor Authentication
 -feature#2607: Allow adding sites from command line
+-feature#3139: Added option in CLI tool remove_graphs for deletion of single graph
 
 1.2.23
 -security#4920: Add .htaccess file to scripts folder
